2006-11-26  Paul Eggert  <eggert@cs.ucla.edu>

	* zgrep.in: If the file name contains newline, &, \, or |, escape
	the character so that 'sed' doesn't mishandle it as a replacement.
	Problem reported by Bdale Garbee.

2006-11-25  Paul Eggert  <eggert@cs.ucla.edu>

	* gzip.1 (OPTIONS): ouput -> output.  Problem reported by Matt
	Taggart.
	* vms/gzip.hlp: Likewise.

	* Makefile.am (FILES_TO_CHECK): New macro.
	(check-local): Check only the files in FILES_TO_CHECK, since some
	files under the working directory might be mutating as the test is
	run, e.g., with "make check >log".  Problem reported by Jim
	Meyering.

2006-11-20  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS, configure.ac (AC_INIT):
	Version 1.3.6 released.

	* NEWS: Describe 1.3.6's changes.
	* NEWS, README, README-alpha, TODO: Change from GPL to FDL.
	* .cvsignore, README-cvs, bootstrap, bootstrap.conf: New files.
	* doc/Makefile.am, lib/Makefile.am: New files.
	* THANKS: Change own email address to cs.ucla.edu.  Add Sverre Jarp.
	* TODO: Add new tasks to remove porting cruft and
	all those buggy scripts.

	* configure.ac: Renamed from configure.in.
	(AC_PREREQ): Bump to 2.60.
	(AC_INIT): Bump version to 1.3.6.
	(AC_CONFIG_AUX_DIR): New.
	(AC_CONFIG_HEADERS): Move config.h to lib.
	Input is now lib/config.hin.
	(AM_INIT_AUTOMAKE): Add gnits, dist-shar.
	(AC_PROG_CC_STDC): New, replacing AC_PROG_CC.
	(AM_PROG_CC_C_O, AC_PROG_RANLIB): New.
	(AC_AIX, AC_GNU_SOURCE, AC_MINIX): Remove; gnulib does them now.
	(gl_EARLY, gl_INIT): New.
	match.c was moved to lib/match.c.
	(AC_CHECK_HEADERS_ONCE): Replace AC_CHECK_HEADERS.  Don't check
	for sys/utime.h or utime.h.
	(AC_CHECK_FUNCS_ONCE): Replace AC_CHECK_FUNCS.  Check for fchmod
	and fchown, not utime.
	(AC_REPLACE_FUNCS): Remove; rpmatch is now done by gnulib.
	(AC_CONFIG_FILES): Add doc/Makefile, lib/Makefile.

	* bits.c: Use the more-usual form for copyright notices in source code.
	* deflate.c: Likewise.
	* gzip.c: Likewise.
	* gzip.h: Likewise.